--- a/.gitignore
+++ b/.gitignore
@@ -87,6 +87,7 @@ dist
 # Comment in the public line in if your project uses Gatsby and not Next.js
 # https://nextjs.org/blog/next-9-1#public-directory-support
 # public
+AppData/Local/Google/Chrome/User Data/AutofillStates
 
 # vuepress build output
 .vuepress/dist
