--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "start": "node index.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "math.js": "^1.1.46"
+  }
 }
